# Matamazon

./: CMakeLists.txt  README.md  amount_set.c  amount_set.h  amount_set_main.c  amount_set_tests.c  main-idan.c  main.c  matamazom.c  matamazom_main.c  matamazom_tests.c  printed_filtered_safitest.txt  printed_inventory_safi_test.txt  printed_inventory_safi_test4.txt  printed_order_safi_test.txt  set.h  unofficialtestAmountSet.c
MakeFile/: Makefile
tests/: printed_best_selling.txt  printed_filtered.txt  printed_inventory.txt  printed_no_selling.txt  printed_order.txt
tests/FacebookTests/: printed_best_selling_safitest3.txt  printed_order_safi_test3.txt
tests/facebookTests/: printed_best_selling_safitest.txt  printed_filtered_safitest3.txt  printed_filtered_safitest4.txt  printed_inventory_safi_test3.txt
